=== 5.101.0 (2026-02-01)

* Add detect_unnecessary_association_options plugin to warn/raise for unnecessary association options (jeremyevans)

=== 5.100.0 (2026-01-01)

* Do not report associations with :is_used option as unused in the unused_associations plugin (jeremyevans)

* Make Postgres::PGRange#to_s an alias of #inspect, showing friendly output (jeremyevans)

* Add single_statement_dataset_destroy plugin, so that dataset.destroy uses a single DELETE statement (jeremyevans)

* Support :collate option in set_column_type (jeremyevans)

=== 5.99.0 (2025-12-01)

* Support passing a set as a Dataset#full_text_search terms argument on MSSQL, MySQL, and PostgreSQL (jeremyevans)

* Optimize Dataset#as_set calls to avoid queries in the subset_static_cache plugin (jeremyevans)

* Optimize Model.as_set calls to avoid queries in the static_cache plugin (jeremyevans)

* Support filtering by associations with sets in the pg_array_associations plugin (jeremyevans)

* Support sets in the to_dot extension (jeremyevans)

* Support splitting nil values from sets in the split_array_nil extension (jeremyevans)

* Support sets as input where arrays are accepted as input and order doesn't matter in the pg_hstore_ops/pg_json_ops extensions (jeremyevans)

* Auto parameterize IN/NOT IN with sets in the pg_auto_parameterize_in_array extension (jeremyevans)

* Auto parameterize IN/NOT IN with sets of integers in the pg_auto_parameterize extension (jeremyevans)

* Support sets in the eval_inspect extension (jeremyevans)

* Support sets of integers or strings for include validations in the constraint_validations extension (jeremyevans)

* Support filtering by associations using a set of associated objects (jeremyevans)

* Disallow typecasting sets to string (similar to how hash and array are disallowed) (jeremyevans)

* Deprecate the set_literalizer extension (jeremyevans)

* Support sets in dataset filters similar to arrays, using IN/NOT IN (jeremyevans)
