@@ -675,6 +675,11 @@
 <span class="ul__span">Include caller information when logging queries.</span>
 </li>
 <li class="ul__li ul__li--grid">
+<a class="a" href="rdoc-plugins/files/lib/sequel/extensions/connection_checkout_event_callback_rb.html">connection_checkout_event_callback </a>
+<span class="ul__span">Provides a callback for connection checkout events, allowing for collection of telemetry information.</span>
+</li>
+<li class="ul__li ul__li--grid">
+<li class="ul__li ul__li--grid">
 <a class="a" href="rdoc-plugins/files/lib/sequel/extensions/connection_expiration_rb.html">connection_expiration </a>
 <span class="ul__span">Automatically removes connections from the pool after they have been open longer than a timeout.</span>
 </li>
